feature: include location based on userID using JWT token
